# text-detection-baselines

./: .zenodo.json  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  pixi.toml  pyproject.toml  tox.ini
.github/workflows/: dist.yml  tests.yml
docs/source/: api.rst  conf.py  index.rst  usage.rst
requirements/: build.txt  dev.txt  docs.txt  test.txt
src/text_detection_baselines/: main.py
tests/: test_util.py
text_detection_baselines/: __init__.py
text_detection_baselines/app/tests/: __init__.py  conftest.py  test_app.py
