[project]
name = "text-detection-baselines"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
tdb-evaluate = "text_detection_baselines.main:main"

[build-system] 
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.ruff]
line-length = 119

[tool.pytest]
norecursedirs = [
    ".git",
    ".pixi",
]
